--- a/store/blocks/desktop/screen/home.jsonc
+++ b/store/blocks/desktop/screen/home.jsonc
@@ -2,10 +2,10 @@
   "responsive-layout.desktop#home__desktop": {
     "children": [
       "responsive-layout.desktop#home__banner-desktop",
-      "flex-layout.row#home__section--two",
-      "flex-layout.row#home__section--third",
-      "flex-layout.row#home__section--four",
-      "flex-layout.row#home__section--five"
+      "flex-layout.row#recommendations-shelf",
+      "flex-layout.row#best_games-shelf",
+      "flex-layout.row#gif_cards-shelf",
+      "flex-layout.row#next_game-shelf"
     ]
   }
 }
