--- a/store/blocks/phone/components/home/banner-cards_recommendations.jsonc
+++ b/store/blocks/phone/components/home/banner-cards_recommendations.jsonc
@@ -1,49 +1,47 @@
 {
-    "flex-layout.row#home__section_mobile--one": {
-        "children": [
-            "flex-layout.col#home__section_mobile--one"
-        ]
-    },
-    "flex-layout.col#home__section_mobile--one":{
-        "children": [
-            "rich-text#home__section_mobile--popularcards",
-            "flex-layout.row#home__popularcards_mobile"
-        ],
-        "props": {
-            "blockClass": "home__section_mobile--one"
-        }
-    },
-    "flex-layout.row#home__popularcards_mobile": {
-        "children": [
-            "image#home__section_mobile--img-one",
-            "image#home__section_mobile--img-two",
-            "image#home__section_mobile--img-third"
-        ],
-        "props": {
-            "blockClass": "home__popularcards_mobile"
-        }
-    },
-    "rich-text#home__section_mobile--popularcards": {
-        "props": {
-            "text": "Tarjetas de regalo populares",
-            "textAlignment": "CENTER",
-            "font": "t-heading-3",
-            "blockClass": "home__section_mobile--popularcards"
-        }
-    },
-    "image#home__section_mobile--img-one": {
-        "props": {
-            "src": "assets/img/home/home-cardsrow01/home-card01.webp"
-        }
-    },
-    "image#home__section_mobile--img-two": {
-        "props": {
-            "src": "assets/img/home/home-cardsrow01/home-card02.webp"
-        }
-    },
-    "image#home__section_mobile--img-third": {
-        "props": {
-            "src": "assets/img/home/home-cardsrow01/home-card03.webp"
-        }
+  "flex-layout.row#popular_cards": {
+    "children": ["flex-layout.col#popular_cards"]
+  },
+  "flex-layout.col#popular_cards": {
+    "children": [
+      "rich-text#home__section_mobile--popularcards",
+      "flex-layout.row#home__popularcards_mobile"
+    ],
+    "props": {
+      "blockClass": "popular_cards"
     }
+  },
+  "flex-layout.row#home__popularcards_mobile": {
+    "children": [
+      "image#popular_cards-img-one",
+      "image#popular_cards-img-two",
+      "image#popular_cards-img-third"
+    ],
+    "props": {
+      "blockClass": "home__popularcards_mobile"
+    }
+  },
+  "rich-text#home__section_mobile--popularcards": {
+    "props": {
+      "text": "Tarjetas de regalo populares",
+      "textAlignment": "CENTER",
+      "font": "t-heading-3",
+      "blockClass": "home__section_mobile--popularcards"
+    }
+  },
+  "image#popular_cards-img-one": {
+    "props": {
+      "src": "assets/img/home/home-cardsrow01/home-card01.webp"
+    }
+  },
+  "image#popular_cards-img-two": {
+    "props": {
+      "src": "assets/img/home/home-cardsrow01/home-card02.webp"
+    }
+  },
+  "image#popular_cards-img-third": {
+    "props": {
+      "src": "assets/img/home/home-cardsrow01/home-card03.webp"
+    }
+  }
 }
