--- a/store/blocks/tablet/screen/home.jsonc
+++ b/store/blocks/tablet/screen/home.jsonc
@@ -1,10 +1,11 @@
 {
   "responsive-layout.tablet#home__tablet": {
     "children": [
-    "responsive-layout.tablet#home__banner-tablet",
-    "flex-layout.row#home__section--two",
-    "flex-layout.row#home__section--third",
-    "flex-layout.row#home__section--four",
-    "flex-layout.row#home__section--five"]
+      "responsive-layout.tablet#home__banner-tablet",
+      "flex-layout.row#recommendations-shelf",
+      "flex-layout.row#best_games-shelf",
+      "flex-layout.row#gif_cards-shelf",
+      "flex-layout.row#next_game-shelf"
+    ]
   }
 }
