--- a/store/blocks/tablet/components/home/product_card_layout.jsonc
+++ b/store/blocks/tablet/components/home/product_card_layout.jsonc
@@ -1,14 +1,12 @@
 {
-  "responsive-layout.tablet#home__slider--children--four": {
-    "children": [
-      "list-context.product-list#home__slider--children--four-tablet"
-    ]
+  "responsive-layout.tablet#product__shelf-content": {
+    "children": ["list-context.product-list#product__shelf-context--tablet"]
   },
-  "list-context.product-list#home__slider--children--four-tablet": {
-    "blocks": ["product-summary.shelf#home__gift_card-tablet"],
-    "children": ["slider-layout#demo-products"]
+  "list-context.product-list#product__shelf-context--tablet": {
+    "blocks": ["product-summary.shelf#product__shelf-context-tablet"],
+    "children": ["slider-layout#product__shelf-layout"]
   },
-  "product-summary.shelf#home__gift_card-tablet": {
+  "product-summary.shelf#product__shelf-context-tablet": {
     "children": ["flex-layout.col#product__container-tablet"]
   },
   "flex-layout.col#product__container-tablet": {
@@ -18,35 +16,6 @@
     ],
     "props": {
       "blockClass": "product__container"
-    }
-  },
-  "flex-layout.col#product__image": {
-    "children": ["product-summary-image#shelf"]
-  },
-  "product-summary-image#shelf": {
-    "props": {
-      "showBadge": false,
-      "aspectRatio": "1:1"
-    }
-  },
-  "flex-layout.col#product__information": {
-    "children": [
-      "product-summary-name",
-      "rich-text#product__summary-region",
-      "rich-text#product__summary-at",
-      "product-selling-price"
-    ]
-  },
-  "rich-text#product__summary-region": {
-    "props": {
-      "text": "GLOBAL",
-      "blockClass": "product__summary-region"
-    }
-  },
-  "rich-text#product__summary-at": {
-    "props": {
-      "text": "Desde",
-      "blockClass": "product__summary-at"
     }
   }
 }
