fix: adjust responsive on tablet and desktop devices

--- a/store/blocks/tablet/components/header/navbar.jsonc
+++ b/store/blocks/tablet/components/header/navbar.jsonc
@@ -1,5 +1,5 @@
 {
   "responsive-layout.tablet#header__tablet": {
-    "children": ["flex-layout.row#header__desktop"]
+    "children": ["sticky-layout#mobile"]
   }
 }
