fix: adjust header design in desktop version

--- a/store/blocks/desktop/components/header/login.jsonc
+++ b/store/blocks/desktop/components/header/login.jsonc
@@ -7,7 +7,7 @@
       "passwordPlaceholder": "password",
       "showPasswordVerificationIntoTooltip": true,
       "showIconProfile": true,
-      "iconLabel": "Iniciar sesión"
+      "iconLabel": "Iniciar sesión | Registro"
     }
   }
 }
