--- a/store/blocks/desktop/components/header/searchbar.jsonc
+++ b/store/blocks/desktop/components/header/searchbar.jsonc
@@ -4,7 +4,8 @@
     "props": {
       "openAutocompleteOnFocus": true,
       "placeholder": "",
-      "hasIconLeft": false
+      "hasIconLeft": false,
+      "autocompleteFullWidth": true
     }
   },
   "autocomplete-result-list.v2": {
