--- a/store/blocks/phone/screen/home.jsonc
+++ b/store/blocks/phone/screen/home.jsonc
@@ -6,7 +6,8 @@
       "flex-layout.row#recommendations-shelf",
       "flex-layout.row#best_games-shelf",
       "flex-layout.row#gif_cards-shelf",
-      "flex-layout.row#next_game-shelf"
+      "flex-layout.row#next_game-shelf",
+      "flex-layout.row#buy_now-shelf"
     ]
   }
 }
