feature: improve minicart design styles in mobile and desktop

--- a/store/blocks/phone/components/header/minicart.jsonc
+++ b/store/blocks/phone/components/header/minicart.jsonc
@@ -74,7 +74,8 @@
   },
   "minicart-checkout-button": {
     "props": {
-      "finishShoppingButtonLink": "/checkout/#/orderform"
+      "finishShoppingButtonLink": "/checkout/#/orderform",
+      "blockClass": "checkout__button"
     }
   },
 
