--- a/store/blocks/phone/components/footer/footer_layout.jsonc
+++ b/store/blocks/phone/components/footer/footer_layout.jsonc
@@ -6,25 +6,6 @@
     "children": ["flex-layout.col#footer__container-phone"]
   },
   "flex-layout.col#footer__container-phone": {
-    "children": ["flex-layout.row#footer__payments-container"],
-    "props": {
-      "blockClass": "footer__container-phone"
-    }
-  },
-  "flex-layout.row#footer__payments-container": {
-    "children": [
-      "logo#payment__eneba",
-      "logo#payment__visa",
-      "logo#payment__paypal",
-      "logo#payment__pse",
-      "logo#payment__efecty",
-      "logo#payment__payvalida",
-      "logo#payment__efecty_gana_baloto_cash"
-    ],
-    "props": {
-      "blockClass": "footer__payments-container",
-      "preserveLayoutOnMobile": true,
-      "colSizing": "auto"
-    }
+    "children": ["flex-layout.row#footer__payments-container"]
   }
 }
