--- a/store/blocks/phone/screen/footer.jsonc
+++ b/store/blocks/phone/screen/footer.jsonc
@@ -1,8 +1,8 @@
 {
   "footer-layout.mobile": {
     "children": [
-      "responsive-layout.phone#footer"
-      /* "responsive-layout.tablet#footer" */
+      "responsive-layout.phone#footer",
+      "responsive-layout.tablet#footer"
     ]
   }
 }
