feature: setting options link in footer and improve product card layout

--- a/store/blocks/global/components/home/product_card_layout.jsonc
+++ b/store/blocks/global/components/home/product_card_layout.jsonc
@@ -13,7 +13,8 @@
       "product-summary-name",
       "rich-text#product__summary-region",
       "rich-text#product__summary-at",
-      "product-selling-price"
+      "product-selling-price",
+      "add-to-cart-button"
     ]
   },
   "rich-text#product__summary-region": {
