--- a/store/blocks/global/components/home/buy_now-product-shelf.jsonc
+++ b/store/blocks/global/components/home/buy_now-product-shelf.jsonc
@@ -8,9 +8,9 @@
   "flex-layout.col#buy_now__container": {
     "children": [
       "rich-text#buy_now-title",
-      "responsive-layout.phone#product__shelf_with_minicart-content",
-      "responsive-layout.tablet#product__shelf_with_minicart-content",
-      "responsive-layout.desktop#product__shelf_with_minicart-content",
+      "responsive-layout.phone#product__shelf-content",
+      "responsive-layout.tablet#product__shelf-content",
+      "responsive-layout.desktop#product__shelf-content",
       "link#showmore__buy_now"
     ],
     "props": {
