--- a/store/blocks/phone/components/footer/footer_layout.jsonc
+++ b/store/blocks/phone/components/footer/footer_layout.jsonc
@@ -6,6 +6,21 @@
     "children": ["flex-layout.col#footer__container-phone"]
   },
   "flex-layout.col#footer__container-phone": {
-    "children": ["flex-layout.row#footer__payments-container"]
+    "children": [
+      "flex-layout.row#footer__payments-container",
+      "flex-layout.row#footer__content-phone"
+    ]
+  },
+  "flex-layout.row#footer__content-phone": {
+    "children": ["flex-layout.col#footer__content-phone"],
+    "props": {
+      "blockClass": "footer__content-phone"
+    }
+  },
+  "flex-layout.col#footer__content-phone": {
+    "children": ["flex-layout.row#footer__options-phone"]
+    /* "props": {
+      "blockClass": "footer__content-phone"
+    } */
   }
 }
