--- a/store/blocks/phone/components/footer/footer_layout.jsonc
+++ b/store/blocks/phone/components/footer/footer_layout.jsonc
@@ -19,8 +19,20 @@
   },
   "flex-layout.col#footer__content-phone": {
     "children": ["flex-layout.row#footer__options-phone"]
-    /* "props": {
-      "blockClass": "footer__content-phone"
-    } */
+  },
+  "flex-layout.row#footer__options-phone": {
+    "children": [
+      "flex-layout.col#footer__about_eneba",
+      "flex-layout.col#footer__buy",
+      "flex-layout.col#footer__help",
+      "flex-layout.col#community",
+      "flex-layout.col#professional",
+      "flex-layout.col#follow_us"
+    ],
+    "props": {
+      "preserveLayoutOnMobile": true,
+      "blockClass": "footer__options-phone",
+      "colSizing": "auto"
+    }
   }
 }
