feature: adding trustpilot icon and title

--- a/store/blocks/global/components/footer/social_network_icons.jsonc
+++ b/store/blocks/global/components/footer/social_network_icons.jsonc
@@ -34,5 +34,13 @@
       "height": 28,
       "blockClass": "social-icon"
     }
+  },
+  "logo#social__trustpilot": {
+    "props": {
+      "title": "trustpilot",
+      "url": "assets/svg/social_networks/trustpilot.svg",
+      "height": 34,
+      "blockClass": "social-icon"
+    }
   }
 }
