--- a/store/blocks/tablet/components/footer/footer_layout.jsonc
+++ b/store/blocks/tablet/components/footer/footer_layout.jsonc
@@ -6,6 +6,9 @@
     "children": ["flex-layout.col#footer__container-tablet"]
   },
   "flex-layout.col#footer__container-tablet": {
-    "children": ["flex-layout.row#footer__payments-container"]
+    "children": [
+      "flex-layout.row#footer__payments-container",
+      "flex-layout.row#footer__content-phone"
+    ]
   }
 }
