feature: responsive desktop in footer section

--- a/store/blocks/desktop/components/footer/footer_layout.jsonc
+++ b/store/blocks/desktop/components/footer/footer_layout.jsonc
@@ -3,6 +3,9 @@
     "children": ["flex-layout.col#footer__container-desktop"]
   },
   "flex-layout.col#footer__container-desktop": {
-    "children": ["flex-layout.row#footer__payments-container"]
+    "children": [
+      "flex-layout.row#footer__payments-container",
+      "flex-layout.row#footer__content-phone"
+    ]
   }
 }
