feature: adjust responsive footer and refactor files and folder structure

--- a/store/blocks/desktop/components/footer/footer_layout.jsonc
+++ b/store/blocks/desktop/components/footer/footer_layout.jsonc
@@ -5,7 +5,7 @@
   "flex-layout.col#footer__container-desktop": {
     "children": [
       "flex-layout.row#footer__payments-container",
-      "flex-layout.row#footer__content-phone"
+      "flex-layout.row#footer__content"
     ]
   }
 }
