--- a/store/blocks/phone/components/footer/footer_layout.jsonc
+++ b/store/blocks/phone/components/footer/footer_layout.jsonc
@@ -8,41 +8,7 @@
   "flex-layout.col#footer__container-phone": {
     "children": [
       "flex-layout.row#footer__payments-container",
-      "flex-layout.row#footer__content-phone"
+      "flex-layout.row#footer__content"
     ]
-  },
-  "flex-layout.row#footer__content-phone": {
-    "children": ["flex-layout.col#footer__content-phone"],
-    "props": {
-      "blockClass": "footer__content-phone"
-    }
-  },
-  "flex-layout.col#footer__content-phone": {
-    "children": [
-      "flex-layout.row#footer__options-phone",
-      "flex-layout.col#trustpilot",
-      "flex-layout.row#footer__partners",
-      "locale-switcher",
-      "flex-layout.row#footer__copyright"
-    ],
-    "props": {
-      "blockClass": "content__container-phone"
-    }
-  },
-  "flex-layout.row#footer__options-phone": {
-    "children": [
-      "flex-layout.col#footer__about_eneba",
-      "flex-layout.col#footer__buy",
-      "flex-layout.col#footer__help",
-      "flex-layout.col#community",
-      "flex-layout.col#professional",
-      "flex-layout.col#follow_us",
-      "flex-layout.col#app__download"
-    ],
-    "props": {
-      "preserveLayoutOnMobile": true,
-      "blockClass": "footer__options-phone",
-      "colSizing": "auto"
-    }
   }
 }
